# fast-api-poll-4

./: .env  docker-compose.yml  postgres.env
app/: pyproject.toml
app/app/: alembic.ini  config.py  database.py  main.py
app/app/alembic/: env.py
app/app/alembic/versions/: 0356bd71c0a6_create_question_and_choice.py  39fd220e0018_create_question_and_choice_models.py
app/polls/: crud.py  endpoints.py  models.py  schemas.py
ui/: package.json
ui/src/: App.tsx  index.tsx  types.ts
ui/src/components/template/: Page.tsx
ui/src/routes/Poll/: Details.tsx  index.tsx
ui/src/utils/: queryFn.ts
